Added goom load/save state. Ready to do test runs of goom.

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,6 +1,7 @@
 .PHONY: all clean-compile compile gen mk clean
 
-cmake_args = -DCMAKE_BUILD_TYPE=Debug
+#cmake_args = -DCMAKE_BUILD_TYPE=Debug
+cmake_args = -DCMAKE_BUILD_TYPE=Release
 
 all: compile
 
