--- a/lib/goom/CMakeLists.txt
+++ b/lib/goom/CMakeLists.txt
@@ -38,6 +38,7 @@ target_include_directories(${PROJECT_NAME}
 		$<INSTALL_INTERFACE:include>
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	PRIVATE
+                /home/greg/Prj/github/vivid/include
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
 
