--- a/lib/goom/CMakeLists.txt
+++ b/lib/goom/CMakeLists.txt
@@ -22,7 +22,7 @@ set (SRCE_FILES
                  src/mathtools.c
                  src/sound_tester.c
                  src/surf3d.c
-                 src/tentacle3d.c
+                 src/tentacle3d.cpp
                  src/plugin_info.c
                  src/drawmethods.c
 )
