--- a/lib/goomutils/CMakeLists.txt
+++ b/lib/goomutils/CMakeLists.txt
@@ -4,6 +4,7 @@ project(goomutils LANGUAGES CXX)
 add_library( ${PROJECT_NAME} STATIC
     src/all_maps.cpp
     src/colormap.cpp
+    src/goomrand.cpp
     src/logging.cpp
     src/mathutils.cpp
 )
