--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ include_directories(${includes}
                     ${GLM_INCLUDE_DIR}
                     ${KODI_INCLUDE_DIR}/.. # Hack way with "/..", need bigger Kodi cmake rework to match right include ways (becomes done in future)
                     ${PROJECT_SOURCE_DIR}/lib
-                    ${PROJECT_SOURCE_DIR}/lib/goom/src
+                    ${PROJECT_SOURCE_DIR}/lib/goom/include
                     ${PROJECT_SOURCE_DIR}/lib/goom/goomutils/include
                     ${PROJECT_SOURCE_DIR}/lib/vivid/include
                     ${PROJECT_SOURCE_DIR}/lib/fmt/include)
