--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories(${includes}
                     ${PROJECT_SOURCE_DIR}/lib/goom/include
                     ${PROJECT_SOURCE_DIR}/lib/goom/goomutils/include
                     ${PROJECT_SOURCE_DIR}/lib/vivid/include
+                    ${PROJECT_SOURCE_DIR}/lib/json/include
                     ${PROJECT_SOURCE_DIR}/lib/fmt/include)
 
 set(GOOM_SOURCES src/Main.cpp)
