Got json pretty good.

--- a/lib/goom/CMakeLists.txt
+++ b/lib/goom/CMakeLists.txt
@@ -23,6 +23,7 @@ set (SRCE_FILES
                  src/goom_draw.cpp
                  src/goom_plugin_info.cpp
                  src/goom_testing.cpp
+                 src/goom_visual_fx.cpp
                  src/ifs_fx.cpp
                  src/lines_fx.cpp
                  src/sound_info.cpp
