--- a/lib/goom/CMakeLists.txt
+++ b/lib/goom/CMakeLists.txt
@@ -45,8 +45,11 @@ target_include_directories(${PROJECT_NAME}
     PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/goom/include/goom
         ${CMAKE_SOURCE_DIR}/lib/goomutils/include
+)
+target_include_directories(${PROJECT_NAME}
+    SYSTEM PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/vivid/include
-        ${CMAKE_SOURCE_DIR}/lib/json/include
+        ${CMAKE_SOURCE_DIR}/lib/cereal/include
         ${CMAKE_SOURCE_DIR}/lib/fmt/include
         ${CMAKE_SOURCE_DIR}/lib/magic_enum/include
 )
