Good quality cleaning including Pixel.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(COMMON_C_WARNINGS -Wall -Wextra -Wsign-conversion)
+set(COMMON_C_WARNINGS -Wall -Wextra -Weffc++ -Wsign-conversion)
 
 find_package(Kodi REQUIRED)
 find_package(glm REQUIRED)
