Save/restore tests started.

--- a/lib/goomutils/CMakeLists.txt
+++ b/lib/goomutils/CMakeLists.txt
@@ -19,8 +19,12 @@ target_include_directories( ${PROJECT_NAME}
     PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/goomutils/include/goomutils
         ${CMAKE_SOURCE_DIR}/lib/goom/include
+)
+target_include_directories( ${PROJECT_NAME}
+    SYSTEM PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/vivid/include
         ${CMAKE_SOURCE_DIR}/lib/fmt/include
+        ${CMAKE_SOURCE_DIR}/lib/cereal/include
         ${CMAKE_SOURCE_DIR}/lib/magic_enum/include
 )
 
