Cleaned cmake files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.13)
+
 project(visualization.goom)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
@@ -6,7 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(COMMON_C_WARNINGS -Wall -Wextra -Weffc++ -Wsign-conversion)
+set(CMAKE_COMMON_C_WARNINGS -Wall -Wextra)
 
 find_package(Kodi REQUIRED)
 find_package(glm REQUIRED)
@@ -23,25 +24,22 @@ else()
   add_definitions(${OPENGLES_DEFINITIONS})
 endif()
 
-add_subdirectory(lib/goom)
-add_subdirectory(lib/goomtests)
-add_subdirectory(lib/goomutils)
-add_subdirectory(lib/vivid)
+set(LIBS_DIR ${CMAKE_SOURCE_DIR}/lib)
+add_subdirectory(lib)
 
 include_directories(${includes}
-                    ${PROJECT_SOURCE_DIR}/lib/goom/include
-                    ${PROJECT_SOURCE_DIR}/lib/goom/goomutils/include
-                    ${PROJECT_SOURCE_DIR}/lib
+                    ${LIBS_DIR}/goom/include
+                    ${LIBS_DIR}/goom/goomutils/include
+                    ${LIBS_DIR}
                     SYSTEM ${GLM_INCLUDE_DIR}
                     SYSTEM ${KODI_INCLUDE_DIR}/.. # Hack way with "/..", need bigger Kodi cmake rework to match right include ways (becomes done in future)
-                    SYSTEM ${PROJECT_SOURCE_DIR}/lib/vivid/include
-                    SYSTEM ${PROJECT_SOURCE_DIR}/lib/cereal/include
-                    SYSTEM ${PROJECT_SOURCE_DIR}/lib/fmt/include)
+                    SYSTEM ${LIBS_DIR}/vivid/include
+                    SYSTEM ${LIBS_DIR}/cereal/include
+                    SYSTEM ${LIBS_DIR}/fmt/include)
 
 set(GOOM_SOURCES src/Main.cpp)
 
 set(GOOM_HEADERS src/CircularBuffer.h
-                 src/AudioData.h
                  src/Main.h)
 
 if ($ENV{DO_TESTING})
@@ -51,6 +49,14 @@ endif()
 
 list(APPEND DEPLIBS goom goomutils vivid)
 
-build_addon(visualization.goom GOOM DEPLIBS)
+add_compile_options(${CMAKE_COMMON_C_WARNINGS})
+
+message(STATUS "C Compile features = \"${COMMON_C_COMPILE_FEATURES}\".")
+message(STATUS "C warnings = \"${CMAKE_COMMON_C_WARNINGS}\".")
+message(STATUS "C++ standard = \"${CMAKE_CXX_STANDARD}\".")
+message(STATUS "C++ standard required = \"${CMAKE_CXX_STANDARD_REQUIRED}\".")
+message(STATUS "C++ extensions = \"${CMAKE_CXX_EXTENSIONS}\".")
+
+build_addon(${PROJECT_NAME} GOOM DEPLIBS)
 
 include(CPack)
