Added callbacks to text draw color.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CMAKE_COMMON_C_WARNINGS -Wall -Wextra)
 
 find_package(Kodi REQUIRED)
 find_package(glm REQUIRED)
+#include(FindFreetype)
+#find_package(freetype REQUIRED)
 
 if(APP_RENDER_SYSTEM STREQUAL "gl" OR NOT APP_RENDER_SYSTEM)
   find_package(OpenGl REQUIRED)
