Added pedantic warning.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_compile_options(-Wall -Wextra -Weffc++ -Wsign-conversion)
+add_compile_options(-Wall -Wextra -Weffc++ -Wsign-conversion -pedantic)
 
 add_subdirectory(goom)
 add_subdirectory(goomtests)
