--- a/lib/goom/CMakeLists.txt
+++ b/lib/goom/CMakeLists.txt
@@ -42,6 +42,7 @@ target_include_directories(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME}
     SYSTEM PRIVATE
+        ${LIBS_DIR}/freetype2/include
         ${LIBS_DIR}/vivid/include
         ${LIBS_DIR}/cereal/include
         ${LIBS_DIR}/fmt/include
