--- a/lib/goomtests/CMakeLists.txt
+++ b/lib/goomtests/CMakeLists.txt
@@ -18,8 +18,8 @@ target_link_libraries( ${PROJECT_NAME}
     PUBLIC
         goom
         goomutils
+        freetype
         vivid
-        ${FREETYPE_LIBRARIES}
         pthread
 )
 
