Renamed colormap.* to colormaps.*

--- a/lib/goomutils/CMakeLists.txt
+++ b/lib/goomutils/CMakeLists.txt
@@ -9,11 +9,12 @@ endif()
 add_library( ${PROJECT_NAME} 
     STATIC
         src/all_maps.cpp
-        src/colormap.cpp
+        src/colormaps.cpp
         src/colorutils.cpp
         src/goomrand.cpp
         src/logging.cpp
         src/mathutils.cpp
+        src/random_colormaps.cpp
         src/strutils.cpp
         src/thread_pool.cpp
 )
