--- a/lib/goomutils/CMakeLists.txt
+++ b/lib/goomutils/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library( ${PROJECT_NAME}
         src/random_colormaps_manager.cpp
 )
 
+# add_sanitizers(${PROJECT_NAME})
+
 target_include_directories( ${PROJECT_NAME}
     PUBLIC
         ${LIBS_DIR}/goom/include
