--- a/lib/goom/CMakeLists.txt
+++ b/lib/goom/CMakeLists.txt
@@ -30,6 +30,8 @@ add_library(${PROJECT_NAME}
         src/text_draw.cpp
 )
 
+# add_sanitizers(${PROJECT_NAME})
+
 target_include_directories(${PROJECT_NAME}
     PUBLIC
         ${LIBS_DIR}/goom/include
