--- a/lib/goomutils/CMakeLists.txt
+++ b/lib/goomutils/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 add_library( ${PROJECT_NAME} 
     STATIC
         src/all_maps.cpp
+        src/bitmaps.cpp
         src/colormaps.cpp
         src/colorutils.cpp
         src/goomrand.cpp
