Made vivid compile with C++14.

--- a/lib/vivid/tests/CMakeLists.txt
+++ b/lib/vivid/tests/CMakeLists.txt
@@ -13,6 +13,11 @@ target_include_directories( vivid_tests
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
+set_target_properties( vivid_tests
+    PROPERTIES
+        CXX_STANDARD 20
+)
+
 target_link_libraries( vivid_tests
     PRIVATE
         libs::vivid
