Extracted out small bitmaps.

--- a/lib/goomutils/CMakeLists.txt
+++ b/lib/goomutils/CMakeLists.txt
@@ -20,9 +20,10 @@ add_library( ${PROJECT_NAME}
         src/logging.cpp
         src/mathutils.cpp
         src/random_colormaps.cpp
+        src/random_colormaps_manager.cpp
+        src/small_image_bitmaps.cpp
         src/strutils.cpp
         src/thread_pool.cpp
-        src/random_colormaps_manager.cpp
 )
 
 target_include_directories( ${PROJECT_NAME}
